# copilotkit-example

agent-py/: .dockerignore  .gitignore  Dockerfile  langgraph.json  pyproject.toml  start.sh
agent-py/tutorial_customer_support/: agent.py  demo.py
agent-py/tutorial_customer_support.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ui/: package-lock.json
ui/src/app/: page.tsx
ui/src/app/api/copilotkit/: route.ts
