[tool.poetry]
name = "tutorial_customer_support"
version = "0.1.0"
description = "Customer Support Tutorial"
authors = ["Markus Ecker <markus.ecker@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tutorial_customer_support"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langgraph = "0.2.52"
langchain-core = "^0.3.12"
langchain-community = "^0.3.1"
langchain-anthropic = "0.2.3"
langchain = "0.3.4"
openai = "^1.52.1"
tavily-python = "^0.5.0"
copilotkit = "0.1.41"
python-dotenv = "^1.0.1"
uvicorn = "^0.31.0"
pandas = "^2.2.3"
fastapi = "^0.115.0"
gunicorn = "^23.0.0"

[tool.poetry.scripts]
demo = "tutorial_customer_support.demo:main"
seed = "tutorial_customer_support.seed:main"